bid info fix dark mode and phone display adjustments for bid

--- a/styles/Header.css
+++ b/styles/Header.css
@@ -99,7 +99,7 @@ body {
 }
 
 .flag-support {
-  margin-top: 2px;
+  margin-top: 4px;
   margin-right: 15px;
 }
 
